# openclaw-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: agents.js  llm.rs  logs.rs  mod.rs  openclaw.rs  scheduler.rs  system.rs
src-tauri/src/core/: app_state.rs  errors.rs  paths.rs  security.rs
src-tauri/src/migrations/: 001_init.sql
src-tauri/src/models/: agent.rs  log.rs  mod.rs  schedule.rs  settings.rs
src-tauri/src/services/: approval.rs  db.rs  external_llm.rs  llm_router.rs  local_llm.rs  openclaw_cli.rs  process.rs  sandbox.rs  translator.rs
src/lib/: constants.js  tauri.js  validators.js
src/state/: chatReducer.js  store.jsx
src/ui/: ApprovalCard.jsx  ChatPanel.jsx  Composer.jsx  FloatingButton.jsx  LogsView.jsx  MessageList.jsx  SettingsModal.jsx
