[package]
name = "openclaw-desktop"
version = "0.1.0"
description = "OpenClaw Desktop baseline"
authors = ["you"]
edition = "2021"


[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

r2d2 = "0.8"
r2d2_sqlite = { version = "0.25", features = ["bundled"] }


[build-dependencies]
tauri-build = { version = "2", features = [] }
